# HTR

./: CMakeLists.txt  README.md  htr_cube.h  htr_solver.h  main.cpp  prevent_moves_3d.h
